# platform_frameworks_support

./: .gitignore  Android.mk  CleanSpec.mk  OWNERS  PREUPLOAD.cfg  README.md  \  build.gradle  checkDokkaReproducibility.sh  cleanBuild.sh  generate_api_diffs.py  gradle.properties  gradlew  groups  include-composite-deps.gradle  project.config  regenerateReleaseApis.py  reproduce-b-112931426.sh  script.py  settings.gradle  settings.gradle.kts  studiow
activity/: build.gradle
animation/: build.gradle  lint-baseline.xml
annotations/: build.gradle
api/: 26.0.0-SNAPSHOT.txt  26.0.0-alpha1.txt
app-toolkit/: Android.mk  settings.gradle
appcompat/: README.md  build.gradle  lint-baseline.xml
appcompat-resources/: build.gradle
asynclayoutinflater/: build.gradle
autofill/: build.gradle
benchmark/: build.gradle  lockClocks.sh
biometric/: build.gradle  lint-baseline.xml
browser/: build.gradle  lint-baseline.xml
buildSrc/: build.gradle  build_dependencies.gradle  dependencies.gradle  init.gradle  jetify.gradle  kotlin-dsl-dependency.gradle.kts  out.gradle  release.gradle  repos.gradle  studio_versions.properties
camera/: README.md
captures/: com.example.androidx.preference_2018.08.24_13.36.li  com.example.androidx.preference_2018.08.24_13.59.li  (+1 more)
memoryfile/: CMakeLists.txt  OWNERS  build.gradle
memoryfile/src/androidTest/: AndroidManifest.xml
memoryfile/src/androidTest/java/androidx/os/: MemoryFileTest.java
memoryfile/src/main/: AndroidManifest.xml
memoryfile/src/main/cpp/: memoryfile.cpp
memoryfile/src/main/java/androidx/os/: MemoryFile.java
(+7582 files in other folders)
